# pokedle-versus

./: Cargo.toml  README.md  notes.md
src/: db_builder.rs  game.rs  lib.rs  pokeapi.rs  pokemon.rs
static/: index.html
static/alice/: index.html
static/bob/: index.html
static/menu/: index.html
