[package]
name = "pokedle-versus"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.50.0", features = ["full"] }
